# AndroidSamples

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Log.h  NativeLib.cpp  NativeLib2.cpp
app/src/main/jni/: com_wangw_samples_jni_NativeMethods.h
app/src/main/res/anim/: popup_in.xml  popup_out.xml
app/src/main/res/color/: selector_pinnedheaderlist_index.xml
app/src/main/res/drawable/: divider.xml  overlay_shape.xml
app/src/main/res/layout/: acticity_video_cache.xml  activity_appbar_sample.xml  activity_audio_samples.xml  activity_default_popup_window_sample.xml  activity_ex_pinned_header_list_view.xml  activity_exo_player_samples.xml  activity_flow_layout.xml  activity_fresco_frist.xml  activity_home.xml  activity_image_density.xml  activity_itemdecor.xml  activity_jni_sample.xml  activity_leakcanary.xml  activity_leakcanarytest_activy.xml  activity_main.xml  activity_media_codec_sample.xml  activity_opengl_frist_sample.xml  activity_opengl_videorecorder.xml  activity_percent_frame.xml  activity_pinnedheaderlistview.xml  activity_pull_refresh.xml  activity_push_refresh.xml  activity_refresh.xml  activity_refresh_layout.xml  activity_scrolling.xml  activity_simple_exo_player.xml  activity_sticky_header_recycler.xml  activity_video_audio.xml  activity_video_sapmes.xml  activity_weight_sample.xml  color_picker_dialog.xml  content_scrolling.xml  header_item.xml  item_grid.xml  item_grid_recycleview.xml  item_item_decor.xml  layout_refresh_content.xml  (+5 more)
(+238 files in other folders)
